--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,167 @@
 
+@ARTICLE{Burgess2014-mf,
+  title    = "Beyond connectivity: how empirical methods can quantify
+              population persistence to improve marine protected-area design",
+  author   = "Burgess, Scott C and Nickols, Kerry J and Griesemer, Chris D and
+              Barnett, Lewis A K and Dedrick, Allison G and Satterthwaite, Erin
+              V and Yamane, Lauren and Morgan, Steven G and White, J Wilson and
+              Botsford, Louis W",
+  abstract = "Demographic connectivity is a fundamental process influencing the
+              dynamics and persistence of spatially structured populations.
+              Consequently, quantifying connectivity is essential for properly
+              designing networks of protected areas so that they achieve their
+              core ecological objective of maintaining population persistence.
+              Recently, many empirical studies in marine systems have provided
+              essential, and historically challenging to obtain, data on
+              patterns of larval dispersal and export from marine protected
+              areas (MPAs). Here, we review the empirical studies that have
+              directly quantified the origins and destinations of individual
+              larvae and assess those studies' relevance to the theory of
+              population persistence and MPA design objectives. We found that
+              empirical studies often do not measure or present quantities that
+              are relevant to assessing population persistence, even though
+              most studies were motivated or contextualized by MPA
+              applications. Persistence of spatial populations, like nonspatial
+              populations, depends on replacement, whether individuals
+              reproduce enough in their lifetime to replace themselves. In
+              spatial populations, one needs to account for the effect of
+              larval dispersal on future recruitment back to the local
+              population through local retention and other connectivity
+              pathways. The most commonly reported descriptor of larval
+              dispersal was the fraction of recruitment from local origin
+              (self-recruitment). Self-recruitment does not inform
+              persistence-based MPA design because it is a fraction of those
+              arriving, not a fraction of those leaving (local retention), so
+              contains no information on replacement. Some studies presented
+              connectivity matrices, which can inform assessments of
+              persistence with additional knowledge of survival and fecundity
+              after recruitment. Some studies collected data in addition to
+              larval dispersal that could inform assessments of population
+              persistence but which were not presented in that way. We describe
+              how three pieces of empirical information are needed to fully
+              describe population persistence in a network of MPAs: (1)
+              lifetime fecundity, (2) the proportion of larvae that are locally
+              retained (or the full connectivity matrix), and (3) survival rate
+              after recruitment. We conclude by linking theory and data to
+              provide detailed guidance to empiricists and practitioners on
+              field sampling design and data presentation that better informs
+              the MPA objective of population persistence.",
+  journal  = "Ecol. Appl.",
+  volume   =  24,
+  number   =  2,
+  pages    = "257--270",
+  month    =  mar,
+  year     =  2014,
+  language = "en"
+}
+
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{Hanski1982-kw,
+  title     = "Dynamics of Regional Distribution: The Core and Satellite
+               Species Hypothesis",
+  author    = "Hanski, Ilkka",
+  abstract  = "[A new concept is introduced to analyse species' regional
+               distributions and to relate the pattern of distributions to
+               niche relations. Several sets of data indicate that average
+               local abundance is positively correlated with regional
+               distribution, i.e. the fraction of patchily distributed
+               population sites occupied by the species. This observation is
+               not consistent with the assumptions of a model of regional
+               distribution introduced by Levins. A corrected model is now
+               presented, in which the probability of local extinction is a
+               decreasing function of distribution, and a stochastic version of
+               the new model is analysed. If stochastic variation in the rates
+               of local extinction and/or colonization is sufficiently large,
+               species tend to fall into two distinct types, termed the
+               ``core'' and the ``satellite'' species. The former are
+               regionally common and locally abundant, and relatively well
+               spaced-out in niche space, while opposite attributes
+               characterize satellite species. This dichotomy, if it exists,
+               provides null hypotheses to test theories about community
+               structure, and it may help to construct better structured
+               theories. Testing the core-satellite hypothesis and its
+               connection to the r-K theory and to Raunkiaer's ``law of
+               frequency'' are discussed. /// Предлагается новая концепция дпя
+               анализа регионального распределения видов и дпя сравнения
+               характера распределения с соотношением ниш. Несколько серий
+               данных показали, что величина средией локальной численности
+               положительно коррелирует с региональньм распроистранением, то
+               есть с относительньм количеством мозаисно расположенных видовых
+               стаций, занятых данньм видом. Это наблюдение не соотвествует
+               модели регионального распределения, предложенной Левинсом. Здесь
+               предлагается исправленная модель, в которой обсуждается
+               вероятность локального исчезновения вида, как уменьшающаяся
+               функция распространения и стохастическая версия новой модели.
+               Если стохастические колебания скоростей локального исчезновения
+               и/или колонизации достаточного велики, проявляется тенденция
+               разделения видов на два четких типа, называемых ``основньм'' и
+               ``сателлитньм''. Первые обьины в своем регионе, локально
+               многочисленны, а сателлитные виды характеризуются
+               противоположньми признаками. Эта дихотомия если она существует,
+               позволяет использвать нуль-гипотезу для проверки теории
+               структупы сообщества и она может помочь в создании более
+               совершенной теории. Обсуждаются результаты проверки гипотезы
+               ``основных-сателлитных'' видов и ее связи с г-К теорией и
+               биологическими спектрами Раункиера.]",
+  journal   = "Oikos",
+  publisher = "[Nordic Society Oikos, Wiley]",
+  volume    =  38,
+  number    =  2,
+  pages     = "210--221",
+  year      =  1982
+}
+
+@ARTICLE{Beger2014-jx,
+  title     = "Evolving coral reef conservation with genetic information",
+  author    = "Beger, Maria and Selkoe, Kimberly A and Treml, Eric and Barber,
+               Paul H and von der Heyden, Sophie and Crandall, Eric D and
+               Toonen, Robert J and Riginos, Cynthia",
+  abstract  = "Targeted conservation and management programs are crucial for
+               mitigating anthropogenic threats to declining biodiversity.
+               Although evolutionary processes underpin extant patterns of
+               biodiversity, it is uncommon for resource managers to explicitly
+               consider genetic data in conservation prioritization. Genetic
+               information is inherently relevant to management because it
+               describes genetic diversity, population connectedness, and
+               evolutionary history; thereby typifying their behavioral traits,
+               physiological climate tolerance, evolutionary potential, and
+               dispersal ability. Incorporating genetic information into
+               spatial conservation prioritization starts with reconciling the
+               terminology and techniques used in genetics and conservation
+               science. Genetic data vary widely in analyses and their
+               interpretations can be challenging even for experienced
+               geneticists. Therefore, identifying objectives, decision rules,
+               and implementations in decision support tools specifically for
+               management using genetic data is challenging. Here, we outline a
+               framework for eight genetic system characteristics, their
+               measurement, and how they could be incorporated in spatial
+               conservation prioritization for two contrasting objectives:
+               biodiversity preservation vs maintaining ecological function and
+               sustainable use. We illustrate this framework with an example
+               using data from Tridacna crocea (Lamarck, 1819) (boring giant
+               clam) in the Coral Triangle. We find that many reefs highlighted
+               as conservation priorities with genetic data based on genetic
+               subregions, genetic diversity, genetic distinctness, and
+               connectivity are not prioritized using standard practices.
+               Moreover, different characteristics calculated from the same
+               samples resulted in different spatial conservation priorities.
+               Our results highlight that omitting genetic information from
+               conservation decisions may fail to adequately represent
+               processes regulating biodiversity, but that conservation
+               objectives related to the choice of genetic system
+               characteristics require careful consideration.",
+  journal   = "Bull. Mar. Sci.",
+  publisher = "University of Miami - Rosenstiel School of Marine and
+               Atmospheric Science",
+  volume    =  90,
+  number    =  1,
+  pages     = "159--185",
+  month     =  jan,
+  year      =  2014
+}
+
 @ARTICLE{Kininmonth2019-jl,
   title    = "Strategies in scheduling marine protected area establishment in a
               network system",
