--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial"
+title: "Tutorial Overview"
 output:
   html_document: 
     number_sections: yes
@@ -8,8 +8,6 @@ output:
     toc_float: yes
 bibliography: references.bib
 ---
-
- # Overview
 
 This page provides an overview of 'how-to' incorporate connectivity into Marxan [@Ball2009-cp], outlining instructions for using Marxan Connect, and example workflows using demographic and landscape connectivity data. These instructions assume you have already installed Marxan Connect, but if not, instructions can be found [here](index.html#installing)
 
@@ -35,13 +33,13 @@ proj <- "+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0
 
 Marxan Connect was conceptualized in response to the growing need for connectivity to be incorporated into conservation planning on the land and sea. Our aim is to help conservation practitioners incorporate connectivity into the widely-used decision-support tool, Marxan. Marxan Connect is a graphical user interface that can be used to preprocess and prepare existing connectivity data for inclusion in a [Marxan](marxan.org) analysis (Figure 1). In terms of connectivity data, practitioners will need to have access to connectivity data (e.g. dispersal models, GPS tagging data, etc) or at least information about the landscape (see [Connectivity Input](./glossary.html#connectivity_input) section for more details). We note there are two primary ways to incorporate connectivity data into the Marxan input files: 1) as a feature, or 2) as spatial dependencies between planning units (the boundary term). The differences between these approaches are discussed in more detail below. 
 
-![**Figure 1:** *Comparison of workflows between the “representation only” standard approach to Marxan and “Marxan Connect.” Marxan Connect facilitates the use of connectivity data, derived from animal tagging data, genetics, dispersal models, resistance models, or geographic distance, by producing connectivity metrics and connectivity strengths (i.e. spatial dependencies that are used in the place of boundary definitions) before running Marxan. These connectivity metrics and linkage strengths are then used as inputs (connectivity-based conservation features or spatial dependencies) in the traditional Marxan workflow. The cost data in the traditional Marxan analysis refer to the cost of protecting a planning unit (i.e. opportunity cost), not the cost to traverse a landscape.*\label{workflow}](images/workflow.png)
+![**Figure 1:** *Comparison of workflows between the "representation only" standard approach to Marxan and "Marxan Connect." Marxan Connect facilitates the use of connectivity data, derived from animal tagging data, genetics, dispersal models, resistance models, or geographic distance, by producing connectivity metrics and connectivity strengths (i.e. spatial dependencies that are used in the place of boundary definitions) before running Marxan. These connectivity metrics and linkage strengths are then used as inputs (connectivity-based conservation features or spatial dependencies) in the traditional Marxan workflow. The cost data in the traditional Marxan analysis refer to the cost of protecting a planning unit (i.e. opportunity cost), not the cost to traverse a landscape.*\label{workflow}](images/workflow.png)
 
 Beyond preprocessing, Marxan Connect also allows users to run the Marxan software internally or export data products (*e.g.* connectivity metrics, marxan files, etc) to run the analysis externally. 
 
 The Marxan Connect interface is divided into seven separate tabs, one for each step in the workflow. Below we provide a basic description of the function/s available in each step and links to several practice demonstrations.
 
-![**Figure 2:** *Tabs within Marxan Connect that represent steps in the workflow.*\label{workflow}](images/Fig2_workflow_tabs.png)
+![**Figure 2:** *Tabs within Marxan Connect that represent steps in the workflow.*\label{workflow}](images/workflow_tabs.png)
 
 ## Spatial Input
 
@@ -59,11 +57,11 @@ This tab allows users to select which connectivity metrics to calculate and is d
 
 To learn more about each of the metrics, users can select each metric from the drop down menu on the right hand side of the window to view the definition, possible objectives, equation, and an illustration to visualize how the metric works. 
 
-After selecting which metrics to calculate, users must click the “Calculate Metrics” button in the bottom right-hand corner of the window before moving onto the Pre-Evaluation tab. 
+After selecting which metrics to calculate, users must click the "Calculate Metrics" button in the bottom right-hand corner of the window before moving onto the Pre-Evaluation tab. 
 
 ## Pre-Evaluation
 
-The pre-evaluation tab allows users to modify (*i.e.* discretize), plot, and remove connectivity metrics calculated on the previous tab. Note than no action is required in the Pre-Evaluation tab for the spatial dependencies are calculated using the “Connectivity as boundary” option. However, if users want to include connectivity as a conservation feature, they will have to evaluate each of these metrics before moving on. Users can switch between the continuous and discretized metrics using the 'Selection' drop down menu.
+The pre-evaluation tab allows users to modify (*i.e.* discretize), plot, and remove connectivity metrics calculated on the previous tab. Note than no action is required in the Pre-Evaluation tab for the spatial dependencies are calculated using the "Connectivity as boundary" option. However, if users want to include connectivity as a conservation feature, they will have to evaluate each of these metrics before moving on. Users can switch between the continuous and discretized metrics using the 'Selection' drop down menu.
 
 Discretizing creates a binary spatial feature which is 'present' when the value of the continuous connectivity metrics is between the minimum and maximum thresholds. A summary of each metric is shown in table form on the left side of the window to help guide the user through metric modifications. The user can discretize connectivity metrics using quartiles, percentiles or custom values using the ‘Make discrete feature from minimum threshold’ and ‘Make discrete feature to maximum threshold’ panels. To view the frequency histogram for each metric, users can click the ‘Plot Frequency button beside the drop down menu for metrics. Users can also remove the selected metric if deemed not appropriate for the Marxan analysis. Once the upper and lower range of the metric are selected, users will click the ‘Create New Metric’ button. This will save the modifications made to that metric and it will appear in the ‘Connectivity Metric Available for Export’ chart. Users will have to repeat this process until all desired metrics have been discretized. Note the multiple conservation features can be created from a single continuous connectivity metric.
 
@@ -83,9 +81,9 @@ This tab allows users to plot connectivity metrics and Marxan results. It also a
 
 ## Using connectivity data as a 'feature'
 
-A simple way to integrate connectivity data into spatial prioritization is to create a discrete connectivity-based conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. To do so requires calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* betweenness centrality), and then choosing a threshold value(s) from the range of the metric. For example, you may wish to take only the planning units with a betweenness centrality value of  0.8 or higher, which are then converted into a discrete feature (*i.e.* importance areas for connectivity) (Figure 3). Under this treatment, the connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) becomes binary based on if the planning unit meets (1) or does not meet (0), the threshold.This type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) for a particular species (*e.g.*, @Minor2008-js). 
+A simple way to integrate connectivity data into spatial prioritization is to create a discrete connectivity-based conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. To do so requires calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* betweenness centrality), and then choosing a threshold value(s) from the range of the metric. For example, you may wish to take only the planning units with a betweenness centrality value of  0.8 or higher, which are then converted into a discrete feature (*i.e.* importance areas for connectivity) (Figure 3). Under this treatment, the connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) becomes binary based on if the planning unit meets (1) or does not meet (0), the threshold.This type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) for a particular species [*e.g.* @Minor2008-js]. 
 
-These discrete connectivity features are then treated as any other feature in Marxan, where a minimum target is set, ${T_j}$, (*e.g.* 50% of feature ${j}$). In the absence of ecologically determined thresholds, an appropriate value for the thresholds and target ${T_j}$ can be determined by using a cost trade-off curve where one would test the sensitivity of the cost of the best solution and the total summed metric captured in the solution. The value of the thresholds and target ${T_j}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost (Figure 3) . However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "Post-hoc evaluation" section for more details).
+These discrete connectivity features are then treated as any other feature in Marxan, where a minimum target is set, ${T_j}$, (*e.g.* 50% of feature ${j}$). In the absence of ecologically determined thresholds, an appropriate value for the thresholds and target ${T_j}$ can be determined by using a cost trade-off curve where one would test the sensitivity of the cost of the best solution and the total summed metric captured in the solution. The value of the thresholds and target ${T_j}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost (Figure 3) . However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "[Post-hoc evaluation](./targets.html)" section for more details).
 
 When appropriate, high connectivity value planning units may also be "locked-in" to the ensure they are always selected in the solutions, rather than setting a target. Definitions for each connectivity based conservation feature as well as and potential conservation objectives for which they may be useful are available in Marxan Connect can be found on in the [glossary](./glossary.html).
 
