--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,19 @@
 
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{Snyder1987-kx,
+  title     = "Map Projections--a Working Manual",
+  author    = "Snyder, John Parr",
+  abstract  = "Projections Used by the US Geological Survey. Although several
+               portions are essentially unchanged except for corrections and
+               clarification, there is considerable revision in the early
+               general discussion, and the scope of the book, originally
+               limited to map projections used by …",
+  publisher = "U.S. Government Printing Office",
+  year      =  1987,
+  language  = "en"
+}
+
 @ARTICLE{Burgess2014-mf,
   title    = "Beyond connectivity: how empirical methods can quantify
               population persistence to improve marine protected-area design",
